# Lightbring-Engine

./: .gitignore  CMakeLists.txt  README.md  TODO.txt
include/: camera.h  component.h  engine.h  event.h  input.h  material.h  mesh.h  meshPrimitive.h  object.h  renderer.h  scene.h  texture.h  transform.h  vertex.h
include/shaders/: vert.spv
shaders/: shader.frag  shader.vert
src/: engine.cpp  engine.h
src/core/: CMakeLists.txt  camera.cpp  camera.h  camera_p.h  engine_p.h  event.h  input.cpp  input_internal.h  input_p.h  material.cpp  mesh.cpp  message.h  object.cpp  object.h  object_p.h  primitives.h  renderer.h  rendererData.h  scene.cpp  scene.h  structs.h  texture.cpp  transform.cpp
src/fileio/: CMakeLists.txt  import_image.h  import_obj.h  util_io.h
src/renderer/: renderer.h
src/renderer/vulkan/: CMakeLists.txt  debug_vulkan.h  structs_model.h  structs_vulkan.h  sys_vulkan.cpp  sys_vulkan.h  util_vulkan.h
